Hiding personal info

--- a/main.html
+++ b/main.html
@@ -79,7 +79,7 @@
                   <div class="study">
                     <h4>Data, Scripts and Tools</h4>
                     <ul>
-                      <li><a href="https://github.com/leusonmario/TravisAnalysis/" title="" target="_blank" >Minning Scripts</a></li>
+                      <li><a href="TravisAnalysis-master.zip" title="" target="_blank" >Minning Scripts</a></li>
                       <li><a href="sample.html" title="">Sample Dataset</a></li>
                     </ul>
                   </div>
@@ -98,30 +98,7 @@
       <div class="container">
         <div class="cen">
             <div class="col-md-12">
-                <h4>Support and Funding</h4>
-                <ul class="list-inline">
-                    <!-- <li><a href="http://www.capes.gov.br/" class="navbar-brand"><img src="img/capes.png" alt="Post"></a></li> -->
-                    <li>
-	                  	<a href="http://capes.gov.br" target="_blank">
-	                    	<img src="img/capes.png" alt="Capes" width="100" height="50" title="Capes">
-	                    </a>
-                    </li>
-                    <li>
-	                    <a href="http://cin.ufpe.br" target="_blank">
-	                    	<img src="img/cin-ufpe.png" alt="CIn" width="80" height="50" title="Informatics Center">
-	                    </a>
-                    </li>
-                    <li>
-                    	<a href="http://www.ines.org.br/" title="" target="_blank">
-                    		<img src="img/ines.jpeg" alt="INES" width="60" height="50" title="National Institute of Science and Technology for Software Engineering">
-                    	</a>
-                    </li>
-                    <li>
-                    	<a href="http://twiki.cin.ufpe.br/twiki/bin/view/SPG/WebHome" title="" target="_blank">
-                    		<img src="img/spg.jpg" alt="SPG" width="60" height="50" title="Software Productivity Group">
-                    	</a>
-                    </li>
-                </ul>
+                
             </div>
         </div>
       </div>
@@ -129,11 +106,7 @@
             <div class="container">
                 <div class="cen">
                     <div class="col-md-8">
-                        <ul class="list-inline navbar-right">
-                            <li><a href="main.html">HOME</a></li>
-                            <li><a href="http://twiki.cin.ufpe.br/twiki/bin/view/SPG/WebHome" target="_blank">SPG Group</a></li>
-                            <li><a href="http://cin.ufpe.br/~lmps2" target="_blank">Personal Contact</a></li>
-                        </ul>
+                        
                     </div>
                 </div>
             </div>
